k8s/traefik.yml
# declare Traefik deployment
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: traefik-ingress-controller
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - name: traefik
        image: "traefik:1.7-alpine"
        args:
        - "--api"
        - "--entrypoints=Name:http Address::80"
        - "--defaultentrypoints=http"
        - "--kubernetes"
        - "--logLevel=DEBUG"
---
# Declare Traefik ingress service
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-controller
spec:
  selector:
    app: traefik-ingress-controller
  ports:
    - port: 80
      name: http
    - port: 8080
      name: admin
  type: LoadBalancer
