k8s/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec: 
      containers:
        - image: "gcr.io/renderproxy-247016/api:a47fe7dd37fa77bbb313b2b61c5133e2ec099825"
          name: api
          imagePullPolicy: Always
          ports: 
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: ClusterIP
  selector: 
    app: api
  ports:
    - port: 3002
      targetPort: 3002
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: api
spec:
  rules:
    - http:
        paths:
        - path: /
          backend:
            serviceName: api
            servicePort: 3002
