k8s/proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec: 
      containers:
        - image: "gcr.io/renderproxy-247016/proxy@sha256:ecbffdea53411172c5fd915b67288a69eee47098d2d43b01cd3568eb538eac96"
          name: proxy
          imagePullPolicy: Always
          ports: 
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: proxy
spec:
  type: ClusterIP
  selector: 
    app: proxy
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: proxy-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: "true"
    traefik.frontend.priority: "1"
    traefik.ingress.kubernetes.io/rate-limit: |
      extractorfunc: client.ip
      rateset:
        api-rateset:
          period: "10s"
          average: 100
          burst: 200
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: proxy
          servicePort: 3000
